--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: ez.combat
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Easy ComBat Harmonization
+Version: 1.0.0
+Author: Timothy R. Koscik [aut, cre, cph]
+Maintainer: Timothy Koscik <timothy-koscik@uiowa.edu>
+Depends: R (>= 3.5.0)
+Imports: stats
+Description: A dataframe-friendly implementation of ComBat Harmonization which uses an empirical Bayesian framework to remove batch effects.
+    Johnson WE & Li C (2007) "Adjusting batch effects in microarray expression data using empirical Bayes methods" <doi:10.1093/biostatistics/kxj037>
+    Fortin J-P, Cullen N, Sheline YI, Taylor WD, Aselcioglu I, Cook PA, Adams P, Cooper C, Fava M, McGrath PJ, McInnes M, Phillips ML, Trivedi MH, Weissman MM, & Shinohara RT (2017) "Harmonization of cortical thickness measurements across scanners and sites" <doi:10.1016/j.neuroimage.2017.11.024>
+    Fortin J-P, Parker D, Tunç B, Watanabe T, Elliott MA, Ruparel K, Roalf DR, Satterthwaite TD, Gur RC, Gur RE, Schultz RT, Verma R, & Shinohara RT (2017) "Harmonization of multi-site diffusion tensor imaging data" <doi:10.1016/j.neuroimage.2017.08.047>
+License: Artistic-2.0
 Encoding: UTF-8
-LazyData: true
